# space-simulation

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  README.md  clippy.toml  deny.toml  pyproject.toml
.cargo/: config.toml
.claude/: settings.json
.claude/agents/: fe-chrome-tester.md  perf-reviewer.md  sim-e2e-tester.md
.claude/commands/: implement.md  plan-initiative.md  project-implementation.md  project-planner.md
.claude/hooks/: after-edit.sh  check-bash.sh  check-gh-pr.sh  check-skills.sh  session-briefing.sh  suggest-rust-analyzer.sh
.claude/skills/: README.md  balance-analysis.md  cross-layer-e2e.md  frontend-dev.md  general.md  rust-daemon.md  rust-sim-core.md
.config/: nextest.toml
.githooks/: pre-commit  pre-push
.github/: CODEOWNERS
content/: alerts.json  asteroid_templates.json  autopilot.json  component_defs.json  constants.json  crew_roles.json  dev_advanced_state.json  dev_base_state.json  elements.json  events.json  fitting_templates.json  frame_defs.json  ground_start.json  hull_defs.json  initial_station.json  initial_stations.json  milestones.json  module_defs.json  pricing.json  progression_start.json  recipes.json  rockets.json  satellite_defs.json  satellite_start.json  scoring.json  solar_system.json  strategy.json  strategy_phase_presets.json  techs.json
copilot_runtime/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
crates/sim_bench/: Cargo.toml  build.rs
crates/sim_bench/src/: compare.rs  main.rs  overrides.rs  parquet_writer.rs  run_result.rs  runner.rs  scenario.rs  summary.rs
crates/sim_bench/tests/: manufacturing_integration.rs  thermal_scenario.rs
crates/sim_cli/: Cargo.toml
crates/sim_cli/src/: main.rs
crates/sim_control/: Cargo.toml
crates/sim_control/src/: behaviors.rs  lib.rs  objectives.rs  progression_tests.rs  sim_events_integration_tests.rs  strategy_integration_tests.rs  strategy_interpreter.rs
crates/sim_control/src/agents/: fleet_coordinator.rs  mod.rs  module_delivery.rs  ship_agent.rs  ship_assignment.rs  station_agent.rs
crates/sim_control/src/agents/ground_facility_agent/: mod.rs  tests.rs
crates/sim_control/src/agents/ground_facility_agent/concerns/: component_purchase.rs  launch_execution.rs  mod.rs  module_install.rs  satellite_management.rs  sensor_budget.rs  sensor_purchase.rs
crates/sim_control/src/agents/station_agent/: mod.rs  objectives.rs  tests.rs
crates/sim_control/src/agents/station_agent/concerns/: component_import.rs  crew_assignment.rs  crew_recruitment.rs  lab_assignment.rs  material_export.rs  mod.rs  module_management.rs  propellant_management.rs  ship_fitting.rs  slag_jettison.rs
crates/sim_control/tests/: progression.rs  sim_events_integration.rs
crates/sim_core/: Cargo.toml
crates/sim_core/src/: commands.rs  composition.rs  engine.rs  graph.rs  id.rs  instrumentation.rs  lib.rs  metrics.rs  milestone.rs  modifiers.rs  propulsion.rs  research.rs  satellite.rs  scoring.rs  sim_events.rs  spatial.rs  station.rs  tasks.rs  test_fixtures.rs  tests.rs  thermal.rs  trade.rs  types.rs  wear.rs
crates/sim_core/src/station/: assembler.rs  boiloff.rs  lab.rs  maintenance.rs  mod.rs  processor.rs  sensor.rs  thermal.rs
crates/sim_core/src/tests/: assembler.rs  cold_refinery_regression.rs  commands.rs  crew.rs  crucible.rs  deep_scan.rs  deposit.rs  determinism_canary.rs  efficiency.rs  electrolysis.rs  ground_trade.rs  heating.rs  integration.rs  launch.rs  manufacturing.rs  mining.rs  mod.rs  module_index.rs  operating_costs.rs  performance.rs  power.rs  refinery.rs  refuel.rs  replenish.rs  research.rs  research_lifecycle.rs  salary.rs  satellite.rs  survey.rs  thermal.rs  thermal_determinism.rs  thermal_link.rs  trade.rs  trade_integration.rs  transfer.rs  transfer_molten.rs  transit.rs  wear.rs
crates/sim_core/src/types/: commands.rs  constants.rs  content.rs  events.rs  inventory.rs  mod.rs  progression.rs  state.rs  strategy.rs
crates/sim_core/tests/: graph.rs  research_lifecycle.rs
crates/sim_daemon/: Cargo.toml
crates/sim_daemon/src/: alerts.rs  analytics.rs  main.rs  routes.rs  state.rs  tick_loop.rs  world.rs
crates/sim_world/: Cargo.toml
crates/sim_world/src/: content_validation_tests.rs  lib.rs
crates/sim_world/tests/: content_validation.rs
docs/: BALANCE.md  DESIGN_SPINE.md  energy_and_propellant_design.md  epic_plan_energy_propellant.md  movement_cost_model.md  pr-review-checklist.md  reference.md  run-journal-schema.md  solar-system-map-redesign.md  workflow.md
e2e/: global-setup.ts  global-teardown.ts  mcp-server.ts  package-lock.json  package.json  playwright.config.ts  screenshot-cli.ts  tsconfig.json
mcp_advisor/: package-lock.json  package.json
scenarios/: balance_v1.json  baseline.json  cargo_sweep.json  ci_smoke.json  dev_state_smoke.json  economy_baseline.json  economy_long.json  epic2_solar_system.json  epic3_propellant.json  epic5_research.json  events_test.json  export_verification.json  ground_bootstrap.json  ground_ci_smoke.json  ground_economy.json  ground_launch.json  ground_to_orbit.json  hull_fitting.json  manufacturing_chain.json  ml_abundant.json  ml_baseline.json  ml_constrained.json  ml_smoke.json  month.json  multi_station_baseline.json  multi_station_ci_smoke.json  progression_bootstrap.json  progression_ci_smoke.json  progression_deadlock.json  progression_economy.json  progression_full_arc.json  quarter.json  satellite_coverage.json  satellite_deployment.json  satellite_lifecycle.json  scoring_advanced.json  scoring_baseline.json  scoring_calibration.json  scoring_progression.json  scoring_smoke.json  (+9 more)
scripts/: ci_bench_smoke.sh  ci_check_summary.sh  ci_copilot_runtime.sh  ci_e2e.sh  ci_event_sync.sh  ci_python.sh  ci_rust.sh  ci_web.sh  compare_score_curves.py  install_hooks.sh  test_skills.sh  validate_dev_state_smoke.py  validate_ground_smoke.py  validate_progression_full_arc.py  validate_progression_smoke.py  validate_scoring_smoke.py  validate_strategy_comparison.py
ui_web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
(+320 files in other folders)
