[workspace]
members = [
    "crates/sim_core",
    "crates/sim_control",
    "crates/sim_world",
    "crates/sim_cli",
    "crates/sim_daemon",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Allow noisy pedantic lints that don't improve clarity
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# f32 precision loss from u32/usize is acceptable in a game sim
cast_precision_loss = "allow"
