[workspace]
members = [
    "crates/sim_core",
    "crates/sim_control",
    "crates/sim_world",
    "crates/sim_cli",
    "crates/sim_daemon",
    "crates/sim_bench",
]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
# Complexity guardrails — thresholds configured in clippy.toml
cognitive_complexity = "deny"
too_many_lines = "deny"
# Structural issue detection
fn_params_excessive_bools = "deny"
large_enum_variant = "deny"
unnecessary_wraps = "deny"
# Correctness
float_cmp = "deny"
implicit_clone = "deny"
inefficient_to_string = "deny"
# Bug prevention
match_same_arms = "deny"
redundant_else = "deny"
manual_assert = "deny"
# Allow noisy pedantic lints that don't improve clarity
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# f32 precision loss from u32/usize is acceptable in a game sim
cast_precision_loss = "allow"

[workspace.dependencies]
parking_lot = "0.12"
