[project]
name = "space-simulation-analysis"
version = "0.1.0"
description = "ML data pipeline and analysis scripts for space simulation"
requires-python = ">=3.10"
dependencies = [
    "duckdb>=1.0",
    "pyarrow>=17.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.9",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "mypy>=1.14",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["scripts/analysis"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort (import sorting)
    "UP",   # pyupgrade (modern syntax)
    "B",    # flake8-bugbear (common bugs)
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
    "N",    # pep8-naming
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins (shadowing builtins)
    "C4",   # flake8-comprehensions
    "PT",   # flake8-pytest-style
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
]
ignore = [
    "S101",   # assert usage OK in tests
    "S603",   # subprocess calls OK for build scripts
    "S607",   # partial executable path OK for cargo/python3
]

[tool.ruff.lint.isort]
known-first-party = ["scripts"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["scripts/analysis/tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
files = ["scripts/analysis"]
