[package]
name = "sim_bench"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
sim_core = { path = "../sim_core" }
sim_control = { path = "../sim_control" }
sim_world = { path = "../sim_world" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
chrono = "0.4"
rand = "0.8"
rand_chacha = "0.3"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
