[package]
name = "sim_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
sim_core = { path = "../sim_core" }
sim_control = { path = "../sim_control" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
