[package]
name = "sim_control"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
sim_core = { path = "../sim_core" }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
sim_core = { path = "../sim_core", features = ["test-support"] }
sim_world = { path = "../sim_world" }
rand = "0.8"
rand_chacha = "0.3"
serde_json = "1"
