[package]
name = "sim_core"
version = "0.1.0"
edition = "2021"
publish = false

[features]
test-support = ["rand_chacha"]
instrumentation = []

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
rand_chacha = { version = "0.3", optional = true }
ahash = "0.8"
smallvec = { version = "1", features = ["serde"] }

[lints]
workspace = true

[dev-dependencies]
rand_chacha = "0.3"
