[package]
name = "sim_daemon"
version = "0.1.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
sim_core = { path = "../sim_core" }
sim_control = { path = "../sim_control" }
sim_world = { path = "../sim_world" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
async-stream = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-core = "0.3.32"
parking_lot = { workspace = true }

[dev-dependencies]
sim_core = { path = "../sim_core", features = ["test-support"] }
tower = { version = "0.4", features = ["util"] }
http-body-util = "0.1"
tempfile = "3"
