[package]
name = "sim_world"
version = "0.1.0"
edition = "2021"
publish = false

[lints]
workspace = true

[dependencies]
sim_core = { path = "../sim_core" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
rand_chacha = "0.3"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[dev-dependencies]
sim_core = { path = "../sim_core", features = ["test-support"] }
